--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ project(ComputerSystemLabs C)
 
 set(CMAKE_C_STANDARD 99)
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
+
+# 实验一
 add_executable(
         lab1
         lab1/header.h
@@ -17,19 +20,24 @@ add_executable(
         lab1/sumtest.c
 )
 
-add_executable(
-        lab2_32
-        lab2/main.c
-        lab2/hellolinux.c lab2/hellolinux.h
-        lab2/arch.c lab2/arch.h
-        lab2/memroy.c lab2/memroy.h
-        lab2/xtoy.c lab2/xtoy.h)
-set_target_properties(lab2_32 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
+# 实验二
+add_executable(lab2_hellolinux lab2/2_2-hellolinux.c)
+set_target_properties(lab2_hellolinux PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
 
-add_executable(
-        lab2_64
-        lab2/main.c
-        lab2/hellolinux.c lab2/hellolinux.h
-        lab2/arch.c lab2/arch.h
-        lab2/memroy.c lab2/memroy.h
-        lab2/xtoy.c lab2/xtoy.h)
+add_executable(lab2_arch32 lab2/3_1-arch32.c)
+set_target_properties(lab2_arch32 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
+
+add_executable(lab2_arch64 lab2/3_1-arch64.c)
+
+add_executable(lab2_xyz lab2/3_2-xyz.c)
+set_target_properties(lab2_xyz PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
+
+add_executable(lab2_arg_main lab2/3_3-arg_main.c)
+set_target_properties(lab2_arg_main PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
+
+add_executable(lab2_str lab2/3_4-str.c)
+set_target_properties(lab2_str PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
+
+add_executable(lab2_utf8len lab2/4_1-utf8len.c)
+
+add_executable(lab2_ftoa lab2/5_4-ftoa.c)
