--- a/lab4/bufbomb_32_O0_EBP/inject_code/Makefile
+++ b/lab4/bufbomb_32_O0_EBP/inject_code/Makefile
@@ -8,5 +8,9 @@ boom: boom_inject.s
 	$(S2O) boom_inject.s -o boom_inject.o
 	objdump -d boom_inject.o > boom_inject_disass.txt
 
+nitro: nitro_inject.s
+	$(S2O) nitro_inject.s -o nitro_inject.o
+	objdump -d nitro_inject.o > nitro_inject_disass.txt
+
 clean:
 	rm *.o *.txt
