--- a/lab7/Makefile
+++ b/lab7/Makefile
@@ -58,6 +58,11 @@ test15:
 test16:
 	$(DRIVER) -t trace16.txt -s $(TSH) -a $(TSHARGS)
 
+test_all: test01 test02 test03 test04 \
+		  test05 test06 test07 test08 \
+		  test09 test10 test11 test12 \
+		  test13 test14 test15 test16
+
 # Run the tests using the reference shell program
 rtest01:
 	$(DRIVER) -t trace01.txt -s $(TSHREF) -a $(TSHARGS)
